--- a/lib/css/estiloPag.css
+++ b/lib/css/estiloPag.css
@@ -1,5 +1,7 @@
 body{
   background-image: url("../imgs/initial-background.jpg");
+  background-repeat: no-repeat;
+  background-size: 100%
 }
 #searchlocations{
   border-radius: 15px;
