--- a/lib/css/estiloPag.css
+++ b/lib/css/estiloPag.css
@@ -1,24 +1,25 @@
-body{
-  background-image: url("../imgs/initial-background.jpg");
-  background-repeat: no-repeat;
-  background-size: 100%
+body, html{
+  height: 100%;
+  margin: 0;
 }
+
 #searchlocations{
   border-radius: 15px;
   border-style: solid;
   border-color: red;
   border-width: 1px;
-
-
 }
+
 #mapmarker{
   color: red;
 }
+
 #titlesearch{
   color: white;
   text-align: center;
   padding: 10px;
 }
+
 #entersearch{
   text-align: center;
   padding: 10px;
@@ -44,26 +45,19 @@ body{
   text-align: center;
   padding: 10px;
 }
-.bg-success {
-     background-color: transparent!important;
-     background-image: url("./lib/imgs/initial-background.jpg");
-    background-repeat: no-repeat;
-   background-size: 100% 
-}
+
 .bg-warning {
-    background-color: #212529!important; 
+    background-color: #212529!important;
     color:white;
 
 }
 .bg-secondary{
-   background-color: transparent!important; 
+   background-color: transparent!important;
 }
 .form-control{
   width: 50% !important;
 }
-.container-fluid{
-  height: 100% !important;
-}
+
 
 .btn-primary {
     color: #fff;
@@ -77,14 +71,16 @@ body{
   margin-right: auto;
   margin-left: auto;
 }
-#section1{
-  height: 100%;
 
+#section1{
+  min-height: 100%;
+  height: 100%;
+  background-image: url("../imgs/initial-background.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
+/*
 #titulo2{
   border-bottom: 1xp white solid;
-}
-
-  body {
-      position: relative; 
-  }
+}*/
