Update Contact Form

--- a/lib/css/estiloPag.css
+++ b/lib/css/estiloPag.css
@@ -8,6 +8,8 @@ body, html{
   border-style: solid;
   border-color: red;
   border-width: 1px;
+  position: relative;
+  top: 20%;
 }
 
 #mapmarker{
@@ -19,20 +21,17 @@ body, html{
   text-align: center;
   padding: 10px;
 }
-
+#search{
+  margin: 0 auto;
+}
 #entersearch{
-  text-align: center;
+
   padding: 10px;
+  margin: 0 auto;
+  text-align: center;
+  display: block;
 }
 
-#searchlocations{
-  border-radius: 15px;
-  border-style: solid;
-  border-color: red;
-  border-width: 1px;
-
-
-}
 #mapmarker{
   color: red;
 }
