--- a/lib/css/estiloPag.css
+++ b/lib/css/estiloPag.css
@@ -64,13 +64,15 @@ body, html{
     border-color: white;
 
 }
-#formContacto{
-  width: 55%;
-  padding: 25pt;
-  margin-right: auto;
-  margin-left: auto;
+.center_div{
+  margin: 0 auto;
+  width:80%
 }
-
+#section2{
+  padding: 10px;
+  text-align: center;
+  margin: 0 auto;
+}
 #section1{
   min-height: 100%;
   height: 100%;
