--- a/lib/css/estiloPag.css
+++ b/lib/css/estiloPag.css
@@ -64,15 +64,16 @@ body, html{
     border-color: white;
 
 }
-.center_div{
+.center_input{
   margin: 0 auto;
   width:80%
 }
-#section2{
+.center_container{
   padding: 10px;
-  text-align: center;
   margin: 0 auto;
+  text-align: center;
 }
+
 #section1{
   min-height: 100%;
   height: 100%;
@@ -81,6 +82,7 @@ body, html{
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 /*
 #titulo2{
   border-bottom: 1xp white solid;
